@@ -4,6 +4,8 @@ version 0.99.5-rc XX-Ago-2010
  . [FIX] CocosDenshion: Added SDK4.0 compile check in CDAudioManager
  . [FIX] CocosDenshion: panning does not work correctly on iOS4 (issue #949)
  . [FIX] Sprite: little optimization when using BatchNode + children
+ . [FIX] Tools: mkatlas supports artifact removal (issue #549)
+ . [FIX] Tools: mkatlas supports spaces in the name (issue #618)
  . [3RD] Chipmunk: updated to Chipmunk v5.3 and Chipmunk Demos
  
 version 0.99.5-beta 30-Jul-2010 - AKA 'CJ the artifact killer'
